stat-card alignement fixed

--- a/src/app/email-analytics/components/stat-card/stat-card.component.scss
+++ b/src/app/email-analytics/components/stat-card/stat-card.component.scss
@@ -1,3 +1,5 @@
+
+
 .st-card {
   padding-left: 15px !important;
 }
@@ -12,3 +14,11 @@
 :host ::ng-deep .p-component {
   width: 100%;
 }
+
+.text-center {
+  text-align: center; /* Centers text horizontally */
+}
+
+
+
+
